# agent

./: README.md  __init__.py  charts.py  data_load.py  export.py  fee.py  interactive_notebook.ipynb  kpi_logger.py  monitor.py  optimise.py  pyproject.toml  requirements.txt  safety.py  schemas.py  vercel.json
agent/: .vercelignore  ACCEPTANCE_TEST.md  SERVER_DEBUG_GUIDE.md  VERCEL_DEPLOY_GUIDE.md  WEB_ACCEPTANCE_TEST.md  WEB_FRONTEND_GUIDE.md  charts.py  interactive_notebook.ipynb  requirements.txt  safety.py  schemas.py  ui_widgets.py
agent/api/: index.py  minimal.py
agent/bankoptimize/: __init__.py  cli.py
agent/data/: balance_snapshot.csv  bank_master.csv  cashflow_history.csv  fee_table.csv
agent/docs/: ARCH.md  README.md  codex_instructions.md  execution_plan.md  implementation_plan.md  requirements.md
agent/logs/: kpi.jsonl
agent/output/: test_transfer_plan.csv  transfer_plan_20250608_074518.csv  transfer_plan_20250608_181949.csv  transfer_plan_20250609_061503.csv
agent/tests/: test_functions.py  test_integration.py  test_optimise.py
agent/web/: app.py  start_server.py
agent/web/api/: index.py
agent/web/static/css/: style.css
agent/web/static/js/: main.js
agent/web/templates/: base.html  index.html  kpi.html  optimize.html  results.html  upload.html
bankoptimize/: __init__.py  charts.py  cli.py  export.py  fee.py  monitor.py  safety.py
docs/: backlog.md  rulebook.md
tests/: test_cli.py  test_functions.py  test_kpi_logger.py  test_optimise_cutoff.py
